--- a/_styles/styles.css
+++ b/_styles/styles.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 #messages div {
-	margin: 0 0 1em 0;
+	margin: 0 0 1em 2em;
 }
 
 /* different message types */
@@ -30,5 +30,9 @@ div.error {
 }
 #messages img {
     padding: .1em;
+}
+#messages div p {
+    margin: 0 0 0 2em;
+    padding: 0;
 }
 
