--- a/_styles/screen.css
+++ b/_styles/screen.css
@@ -259,6 +259,13 @@ font-size:1.2em;
 	margin-right:10px;
 	}
 
+	#my-tabs {
+	float:right;
+	display:block;
+	background:url(/_images/si/my-tabs.gif) right top no-repeat;
+	padding: 60px 80px 0 0;
+	margin-right:10px;
+	}
 
 	/* 5a Data Tables */
 	table {width:500px;}
