--- a/_styles/swfupload.css
+++ b/_styles/swfupload.css
@@ -120,7 +120,7 @@ a.progressCancel {
     display: block;
     height: 14px;
     width: 14px;
-    background-image: url(../images/cancelbutton.gif);
+    background-image: url(/_images/si/cancelbutton.gif);
     background-repeat: no-repeat;
     background-position: -14px 0px;
     float: right;
