--- a/staticversion/user-template/_styles/screen.css
+++ b/staticversion/user-template/_styles/screen.css
@@ -258,6 +258,14 @@ font-size:1.2em;
 	padding: 60px 80px 0 0;
 	margin-right:10px;
 	}
+	
+	#my-tabs {
+	float:right;
+	display:block;
+	background:url(../_images/si/my-tabs.gif) right top no-repeat;
+	padding: 60px 80px 0 0;
+	margin-right:10px;
+	}
 
 
 	/* 5a Data Tables */
