--- a/staticversion/user-template/_styles/screen.css
+++ b/staticversion/user-template/_styles/screen.css
@@ -267,6 +267,12 @@ font-size:1.2em;
 	margin-right:10px;
 	}
 
+	#shared-tabs {
+	float:right;
+	display:block;
+	padding: 60px 80px 0 0;
+	margin-right:10px;
+	}
 
 	/* 5a Data Tables */
 	table {width:500px;}
