--- a/_styles/swfupload.css
+++ b/_styles/swfupload.css
@@ -90,7 +90,7 @@ div.flash {
     font-size: 0;
     width: 0%;
     height: 10px;
-    background-color: blue;
+    background-color: #CD3301;
     margin-top: 2px;
 }
 
@@ -109,7 +109,7 @@ div.flash {
 .progressBarStatus {
     margin-top: 2px;
     width: 337px;
-    font-size: 7pt;
+    font-size: 12pt;
     font-family: Arial;
     text-align: left;
     white-space: nowrap;
@@ -133,5 +133,6 @@ a.progressCancel:hover {
 /* -- SWFUpload Object Styles ------------------------------- */
 .swfupload {
     vertical-align: top;
+    height:28px;
 }
 
