--- a/_styles/swfupload.css
+++ b/_styles/swfupload.css
@@ -109,7 +109,7 @@ div.flash {
     white-space: nowrap;
 }
 
-a.progressCancel {
+/*a.progressCancel {
     font-size: 0;
     display: block;
     height: 14px;
@@ -122,7 +122,7 @@ a.progressCancel {
 
 a.progressCancel:hover {
     background-position: 0px 0px;
-}
+}*/
 
 #swf-uploader h3 {
 	float:left;
