--- a/_styles/screen.css
+++ b/_styles/screen.css
@@ -48,6 +48,18 @@ h1,h2,h3,h4,h5,h6,p,ul,dl,ol,blockquote {margin-bottom:15px;}
 
 p,ul,dl,ol,blockquote,td,th,label,input,select {font-size:1em}
 
+#tTab,
+textarea, 
+input#txtNewTag, 
+input#username, 
+input#password,
+.box-head input,
+#page_update_name {
+   padding:2px;
+   margin:0 3px;
+   border:2px solid #000
+}
+
 h1 {font-size:2em; color:#fff; line-height:1em; margin-bottom:15px; font-weight:normal}
 
 h2 {font-size:1.5em;font-weight:normal}
@@ -333,6 +345,9 @@ font-size:1.2em;
 		opacity: 0;
 		z-index: 2;
 	}
+	form.page_update {
+		padding-top: 20px;
+	}
 
 	form.page_update input {
 		font-size: 1.3em;
@@ -472,8 +487,12 @@ div#loader {
 		float: left;
 	}
 
+	.bl1 textarea {
+		margin-left: 1em;
+	}
+
 	.bl2 .box-image {
-		padding-left: 0;
+		padding-left: 1em;
 		padding-right: 0;
 		float: right;
 	}
